# Brewfile-rs

./: Cargo.toml  README.md  brewfile
brewfile-parser/: Cargo.toml
brewfile-parser/src/: lib.rs  parsers.rs  string_parser.rs
hello-world-derive/: Cargo.toml
hello-world-derive/src/: lib.rs
src/: brew_command.rs  main.rs  meta.rs  metadata.rs  metafield.rs  parsers.rs  string_parser.rs  tap_command.rs
