workspace = { members = [ "brewfile-parser", "hello-world-derive"] }
[package]
name = "brewfile-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
hello-world-derive = { path = 'hello-world-derive' }
brewfile-parser = { path = 'brewfile-parser' }

